--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "annmap"]
+	path = annmap
+	url = https://github.com/cruk-mi/annmap
+	shallow = true
+	registered = true
